修改Store以便支持FileServer，获取目录和文件已经可用 修改Store的布局

--- a/Store/index-debug.html
+++ b/Store/index-debug.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
 	<title>jeebook store</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/ext-all.css" />
+	<link rel="stylesheet" type="text/css" href="ext-3.0.0/resources/css/ext-all.css" />
 	<link rel="stylesheet" type="text/css" href="Store.css"/>
 </head>
 <body>
@@ -12,8 +12,8 @@
     <div class="loading-indicator"><img src="images/loading.gif" width="32" height="32" style="margin-right:8px;float:left;vertical-align:top;"/>Jeebook Store<br /><span id="loading-msg">Loading...</span></div>
 </div>
 	<!-- js -->
-	<script type="text/javascript" src="../extjs/adapter/ext/ext-base.js"></script>
- 	<script type="text/javascript" src="../extjs/ext-all-debug.js"></script>
+	<script type="text/javascript" src="ext-3.0.0/adapter/ext/ext-base-debug.js"></script>
+ 	<script type="text/javascript" src="ext-3.0.0/ext-all-debug.js"></script>
 	<script language="javascript" src="js/SessionProvider.js"></script>
 	<script type="text/javascript" src="js/FileUploadField.js"></script>
 	<script type="text/javascript" src="js/Store.js"></script>
