--- a/trunk/Store/index-debug.html
+++ b/trunk/Store/index-debug.html
@@ -17,6 +17,7 @@
 	<script language="javascript" src="js/SessionProvider.js"></script>
 	<script type="text/javascript" src="js/FileUploadField.js"></script>
 	<script type="text/javascript" src="js/Store.js"></script>
+	<script type="text/javascript" src="js/Actions.js"></script>
 	<script type="text/javascript" src="js/MainPanel.js"></script>
 	<script type="text/javascript" src="js/StoreGrid.js"></script>
 	<script type="text/javascript" src="js/StoreGridReader.js"></script>
