--- a/trunk/Store/index.html
+++ b/trunk/Store/index.html
@@ -15,7 +15,21 @@
 	<!-- js -->
 	<script type="text/javascript" src="../extjs/adapter/ext/ext-base.js"></script>
  	<script type="text/javascript" src="../extjs/ext-all.js"></script>
-	<script language="javascript" src="Store.js"></script>
+	<script language="javascript" src="js/SessionProvider.js"></script>
+	<script type="text/javascript" src="js/FileUploadField.js"></script>
+	<script type="text/javascript" src="js/Store.js"></script>
+	<script type="text/javascript" src="js/Actions.js"></script>
+	<script type="text/javascript" src="js/MainPanel.js"></script>
+	<script type="text/javascript" src="js/StoreGrid.js"></script>
+	<script type="text/javascript" src="js/StoreTree.js"></script>
+	<script type="text/javascript" src="js/StoreTreeLoader.js"></script>	
+	<script type="text/javascript" src="js/AddFolderPanel.js"></script>
+	<script type="text/javascript" src="js/AddFilePanel.js"></script>	
+	<script type="text/javascript" src="js/ContentPanel.js"></script>	
+	<script type="text/javascript" src="js/Error.js"></script>	
+	<script type="text/javascript" src="js/Event.js"></script>	
+	<script type="text/javascript" src="lang/zh-CN.js"></script>	
+	<script type="text/javascript" src="lang/en-US.js"></script>	
 	
 <div id='adbox'>
 <script type="text/javascript"><!--
