修正文件类型显示

--- a/Store/index.html
+++ b/Store/index.html
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head profile="http://www.w3.org/2005/10/profile">
-	<title>jeebook store</title>
+	<title>Jeebook Store</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/ext-all.css" />
+	<link rel="stylesheet" type="text/css" href="ext-3.0.0/resources/css/ext-all.css" />
 	<link rel="stylesheet" type="text/css" href="Store.css"/>
 </head>
 <body>
@@ -13,8 +13,8 @@
 </div>
 
 	<!-- js -->
-	<script type="text/javascript" src="../extjs/adapter/ext/ext-base.js"></script>
- 	<script type="text/javascript" src="../extjs/ext-all.js"></script>
+	<script type="text/javascript" src="ext-3.0.0/adapter/ext/ext-base.js"></script>
+ 	<script type="text/javascript" src="ext-3.0.0/ext-all.js"></script>
 	<script language="javascript" src="js/SessionProvider.js"></script>
 	<script type="text/javascript" src="js/FileUploadField.js"></script>
 	<script type="text/javascript" src="js/Store.js"></script>
