--- a/trunk/Store/indexJ.html
+++ b/trunk/Store/indexJ.html
@@ -13,6 +13,7 @@
 
 	<!-- js -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="jQuery.pathnav.js"></script>
 	<script type="text/javascript" src="StoreJ.js"></script>
 	
 	<table border="0" style="margin:0 auto">
@@ -44,7 +45,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td></td>
+			<td id="test"></td>
 		</tr>
 	</table>
 
