--- a/trunk/Store/indexJ.html
+++ b/trunk/Store/indexJ.html
@@ -13,7 +13,7 @@
 
 	<!-- js -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="jQuery.pathnav.js"></script>
+	<script type="text/javascript" src="jQuery.pathnavbar.js"></script>
 	<script type="text/javascript" src="StoreJ.js"></script>
 	
 	<table border="0" style="margin:0 auto">
@@ -37,9 +37,9 @@
 		<tr>
 			<td>
 				<div class="ui-widget">
-					<div class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;"> 
-						<p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
-						<strong>Hey!</strong> Sample ui-state-highlight style.</p>
+					<div id="navbar" class="ui-state-highlight ui-corner-all" style="margin-top: 20px; padding: 0 .7em;"> 
+						<!-- <p><span class="ui-icon ui-icon-info" style="float: left; margin-right: .3em;"></span>
+						<strong>Hey!</strong> Sample ui-state-highlight style.</p> -->
 					</div>
 				</div>	
 			</td>
