--- a/trunk/Store/libs/jQuery.PathNavbar/Demo.html
+++ b/trunk/Store/libs/jQuery.PathNavbar/Demo.html
@@ -68,6 +68,26 @@
 			}, 250);
 		});	
 	</script>
-	<div id="navbar"/>
+
+	<ul class="pnb-nav-ul">
+		<li>
+			<span> > </span>
+			<span>Store</span>
+			<ul>
+				<li>jeebook</li>
+				<li>trunk</li>
+			</ul>
+		</li>
+		<li>
+			<span> > </span>
+			<span>libs</span>
+		</li>
+		<li>
+			<span> > </span>
+			<span>jQuery.PathNavbar</span>
+		</li>		
+	</ul>
+		<hr/>
+		<div id="navbar"></div>
 </body>
 </html>
