--- a/trunk/Store/indexJ.html
+++ b/trunk/Store/indexJ.html
@@ -4,7 +4,7 @@
 	<title>Jeebook Store</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/StoreJ.css"/>
-	<link rel="stylesheet" type="text/css" href="libs/ddsmoothmenu/ddsmoothmenu.css"/>
+	<link rel="stylesheet" type="text/css" href="libs/jQuery.PathNavbar/jQuery.pathnavbar.css"/>
 </head>
 <body>
 <div id="loading-mask" style=""></div>
@@ -14,7 +14,8 @@
 
 	<!-- js -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="libs/ddsmoothmenu/ddsmoothmenu.js"></script>
+	<script type="text/javascript" src="libs/jQuery.PathNavbar/jQuery.pathnavbar.js"></script>
+	<script type="text/javascript" src="libs/jQuery.PathNavbar/StringBuilder.js"></script>
 	<script type="text/javascript" src="libs/jquerytools/tools.tooltip-1.1.3.js"></script>
 	<script type="text/javascript" src="libs/jquerytools/tools.tooltip.slide-1.0.0.js"></script>
 	<script type="text/javascript" src="libs/jquerytools/tools.tooltip.dynamic-1.0.1.js"></script>
@@ -24,6 +25,7 @@
 	<script type="text/javascript" src="libs/jquerytools/tools.overlay.apple-1.0.1.js"></script>
 	<script type="text/javascript" src="libs/jquerytools/tools.expose-1.0.5.js"></script>
 	<script type="text/javascript" src="js/StoreJ.js"></script>
+	<script type="text/javascript" src="js/Jeebook.js"></script>
 	
 	<div id="content">
 		<div id="header">
