--- a/trunk/Store/libs/jQuery.PathNavbar/Demo.html
+++ b/trunk/Store/libs/jQuery.PathNavbar/Demo.html
@@ -54,9 +54,10 @@
 	<script type="text/javascript">
 		$(document).ready(function(){
 			
-			$("#navbar").pathnavbar({
+			$("#navbar").pathnavbar(
+			{
 				path : '/jeebook/trunk/Store/libs/jQuery.PathNavbar',
-				minCount : 3,
+				size : 3,
 				callback : function(p) {
 					alert(p);
 				}
@@ -69,25 +70,6 @@
 		});	
 	</script>
 
-	<ul class="pnb-nav-ul">
-		<li>
-			<span> > </span>
-			<span>Store</span>
-			<ul>
-				<li>jeebook</li>
-				<li>trunk</li>
-			</ul>
-		</li>
-		<li>
-			<span> > </span>
-			<span>libs</span>
-		</li>
-		<li>
-			<span> > </span>
-			<span>jQuery.PathNavbar</span>
-		</li>		
-	</ul>
-		<hr/>
-		<div id="navbar"></div>
+	<div id="navbar"></div>
 </body>
 </html>
