--- a/trunk/Store/indexExt.html
+++ b/trunk/Store/indexExt.html
@@ -1,22 +1,23 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head profile="http://www.w3.org/2005/10/profile">
-	<title>jeebook store</title>
+	<title>Jeebook Store</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="ext-3.0.0/resources/css/ext-all.css" />
-	<link rel="stylesheet" type="text/css" href="Store.css"/>
+	<link rel="stylesheet" type="text/css" href="css/StoreExt.css"/>
 </head>
 <body>
 <div id="loading-mask" style=""></div>
 <div id="loading">
     <div class="loading-indicator"><img src="images/loading.gif" width="32" height="32" style="margin-right:8px;float:left;vertical-align:top;"/>Jeebook Store<br /><span id="loading-msg">Loading...</span></div>
 </div>
+
 	<!-- js -->
-	<script type="text/javascript" src="ext-3.0.0/adapter/ext/ext-base-debug.js"></script>
- 	<script type="text/javascript" src="ext-3.0.0/ext-all-debug.js"></script>
+	<script type="text/javascript" src="ext-3.0.0/adapter/ext/ext-base.js"></script>
+ 	<script type="text/javascript" src="ext-3.0.0/ext-all.js"></script>
 	<script language="javascript" src="js/SessionProvider.js"></script>
 	<script type="text/javascript" src="js/FileUploadField.js"></script>
-	<script type="text/javascript" src="js/Store.js"></script>
+	<script type="text/javascript" src="js/StoreExt.js"></script>
 	<script type="text/javascript" src="js/Actions.js"></script>
 	<script type="text/javascript" src="js/MainPanel.js"></script>
 	<script type="text/javascript" src="js/StoreGrid.js"></script>
@@ -29,8 +30,30 @@
 	<script type="text/javascript" src="js/Event.js"></script>	
 	<script type="text/javascript" src="lang/zh-CN.js"></script>	
 	<script type="text/javascript" src="lang/en-US.js"></script>	
+	
+<div id='adbox'>
+<script type="text/javascript"><!--
+google_ad_client = "pub-7330597899926046";
+/* 468x60, Store 08-12-17 */
+google_ad_slot = "6582247482";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
 
-	<div id='adbox'/>
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-3681599-7");
+pageTracker._trackPageview();
+} catch(err) {}</script>
+      
 </body>
 </html>
