添加Jeebook类处理api调用 修改Pagination插件，实现目录名称显示

--- a/Store2/index.html
+++ b/Store2/index.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="libs/jquery.pagination.js"></script>
 	<script type="text/javascript" src="js/StringBuilder.js"></script>
 	<script type="text/javascript" src="js/jquery.msgbar.js"></script>
+	<script type="text/javascript" src="js/Jeebook.js"></script>
 	<script type="text/javascript" src="js/Store.js"></script>
 	
 	<div id="content">
