--- a/trunk/Store2/index.html
+++ b/trunk/Store2/index.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="libs/jquery.pagination.js"></script>
 	<script type="text/javascript" src="js/StringBuilder.js"></script>
 	<script type="text/javascript" src="js/jquery.msgbar.js"></script>
+	<script type="text/javascript" src="js/Jeebook.js"></script>
 	<script type="text/javascript" src="js/Store.js"></script>
 	
 	<div id="content">
