--- a/trunk/Store2/index.html
+++ b/trunk/Store2/index.html
@@ -4,6 +4,7 @@
 	<title>Jeebook Store</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<link rel="stylesheet" type="text/css" href="libs/jquery.pagination.css"/>
+	<link rel="stylesheet" type="text/css" href="css/jquery.booklist.css"/>
 	<link rel="stylesheet" type="text/css" href="css/Store.css"/>
 </head>
 <body>
@@ -17,8 +18,9 @@
 	<script type="text/javascript" src="libs/ajaxupload.js"></script>
 	<script type="text/javascript" src="libs/jquery.corner.js"></script>
 	<script type="text/javascript" src="libs/jquery.pagination.js"></script>
-	<script type="text/javascript" src="js/StringBuilder.js"></script>
+	<script type="text/javascript" src="libs/StringBuilder.js"></script>
 	<script type="text/javascript" src="js/jquery.msgbar.js"></script>
+	<script type="text/javascript" src="js/jquery.booklist.js"></script>
 	<script type="text/javascript" src="js/Jeebook.js"></script>
 	<script type="text/javascript" src="js/Store.js"></script>
 	
@@ -44,7 +46,8 @@
 			<div id="pagination" class="pagination"></div> 	
 		</div>
 
-		<div id="bookpanel" />
+		<div id="booklist" class="booklist" ></div>
+		
 		<div id="footer">
 			<hr />
 			<center>&copy; 2009 - 2010 <a href="http://jeebook.com">Jeebook.com</a></center>
